[gd_scene load_steps=17 format=3 uid="uid://dikp2c2s7v3l1"]

[ext_resource type="Script" uid="uid://b27s4u1ga6ilh" path="res://modules/DialogueManager/scripts/dialogue_manager.gd" id="1_jbixp"]
[ext_resource type="Script" uid="uid://c33l4cwd3q5ta" path="res://modules/DialogueManager/scripts/character.gd" id="2_507jh"]
[ext_resource type="Texture2D" uid="uid://1ljamxn4srot" path="res://modules/Player/Donkey/Esel.png" id="3_gue62"]
[ext_resource type="AudioStream" uid="uid://bx5xiiehfqxlu" path="res://modules/DialogueManager/sfx/ia.ogg" id="3_h8qnj"]
[ext_resource type="Texture2D" uid="uid://d2r8k3ejo64v" path="res://modules/Player/Rooster/Hahn_Basis.png" id="3_ps80s"]
[ext_resource type="AudioStream" uid="uid://jun72wwocb4j" path="res://modules/DialogueManager/sfx/wuff.ogg" id="4_4h1og"]
[ext_resource type="Texture2D" uid="uid://pp8e3iooqhlt" path="res://modules/DialogueManager/resources/Textbox_720_mal_180.png" id="4_kgemy"]
[ext_resource type="Texture2D" uid="uid://bqtu761xxw33" path="res://modules/DialogueManager/resources/Dialog_Char_Box_grun.webp" id="4_ps80s"]
[ext_resource type="AudioStream" uid="uid://bwmb02kevvu2m" path="res://modules/DialogueManager/sfx/ki.ogg" id="4_x6bvr"]
[ext_resource type="AudioStream" uid="uid://dj58bpi4cfqy0" path="res://modules/DialogueManager/sfx/miau.ogg" id="5_eay7n"]
[ext_resource type="Texture2D" uid="uid://ckuc516ca0oj3" path="res://modules/Player/Dog/Kleffer_gut.png" id="7_s4t7b"]
[ext_resource type="Texture2D" uid="uid://dti2dmn20r2w8" path="res://modules/Player/Cat/mieze_blau.png" id="9_m4msv"]

[sub_resource type="Resource" id="Resource_jaug2"]
script = ExtResource("2_507jh")
name = &"Esel"
picture = ExtResource("3_gue62")
voice = ExtResource("3_h8qnj")
metadata/_custom_type_script = "uid://c33l4cwd3q5ta"

[sub_resource type="Resource" id="Resource_kgemy"]
script = ExtResource("2_507jh")
name = &"Hahn"
picture = ExtResource("3_ps80s")
voice = ExtResource("4_x6bvr")
metadata/_custom_type_script = "uid://c33l4cwd3q5ta"

[sub_resource type="Resource" id="Resource_eay7n"]
script = ExtResource("2_507jh")
name = &"Hund"
picture = ExtResource("7_s4t7b")
voice = ExtResource("4_4h1og")
metadata/_custom_type_script = "uid://c33l4cwd3q5ta"

[sub_resource type="Resource" id="Resource_x6bvr"]
script = ExtResource("2_507jh")
name = &"Katze"
picture = ExtResource("9_m4msv")
voice = ExtResource("5_eay7n")
metadata/_custom_type_script = "uid://c33l4cwd3q5ta"

[node name="DialogueManager" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_jbixp")
characters = Dictionary[String, ExtResource("2_507jh")]({
"Esel": SubResource("Resource_jaug2"),
"Hahn": SubResource("Resource_kgemy"),
"Hund": SubResource("Resource_eay7n"),
"Katze": SubResource("Resource_x6bvr")
})

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -212.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("4_kgemy")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogueText" type="RichTextLabel" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "AAAAAAaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="."]
offset_left = 123.0
offset_top = 680.0
offset_right = 323.0
offset_bottom = 880.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
texture = ExtResource("4_ps80s")

[node name="Portrait" type="TextureRect" parent="MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1

[node name="CharacterName" type="RichTextLabel" parent="MarginContainer2/Portrait"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 31.0
offset_top = 156.0
offset_right = 181.0
offset_bottom = 198.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = "Pascal"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="ReadCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="ReadCooldown" to="." method="skip_line"]
